<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="GVL_MachineState" Id="{94a03c0c-071c-489a-94e2-2e1861c8ade1}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	fbMachineState		:FB_MachineState;
	gRunningState		:RunningStatus:=RunningStatus.eManualState;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>